Added .zip and .dmg instructions for binary distributions

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 INSTALL - installation instructions for the MyMan video game
-Copyright 2003, 2006, Benjamin Sittler <bsittler@gmail.com>
+Copyright 2003, 2006-2007, Benjamin C. Wiley Sittler <bsittler@gmail.com>
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
@@ -20,9 +20,22 @@ To install MyMan from a binary distribution, first unpack the archive
 (replacing VERSION with the actual myman version, and HOST with the
 actual HOST type):
 
+For compressed tarball (.tar.gz) binary distributions:
+
   $  gunzip myman-VERSION-HOST.tar.gz &&
      tar -xf myman-VERSION-HOST.tar &&
      cd myman-VERSION-HOST
+
+For ZIP archive (.zip) binary distributions:
+
+  $  unzip myman-VERSION-HOST.zip &&
+     cd myman-VERSION-HOST
+
+For Mac OS X disk image (.dmg) binary distribtuions:
+
+  $  open myman-VERSION-HOST.dmg
+     (wait for disk image to be attached)
+  $  cd /Volumes/myman-VERSION-HOST
 
 Then run the following command as `root':
 
@@ -38,36 +51,59 @@ myman-VERSION-HOST directory:
 
   #  /bin/sh ./uninstall.sh
 
+Note that the binaries you install may depend on dynamically linked
+libraries which will also need to be installed before myman will work.
+
 
 Installation from Source
 ------------------------
 
 While there is a `configure' script included, using it is not
-mandatory -- most configuration is done through edits to `Makefile' at
-present.
+mandatory -- most configuration is possible through edits to
+`Makefile'.
 
-Hopefully, a simple 'make' will build you working executables for all the
-included myman variants. The original variant is called simply 'myman'. If
-make fails, edit the makefile after reading this file, and try again.
+Hopefully, a simple `make' will build you a working executable
+containing all the included game variants and sizes, called simply
+`myman'. If make fails, edit the makefile after reading this file, and
+try again.
 
 0. Prerequisites -- see the end of this for URLs:
   (a) a working POSIX-style Bourne-compatible shell, e.g. bash, ash, or pdksh
     ---- substitute the full path to this shell for /bin/sh in each step below
-  (b) a working ANSI C compiler, e.g. gcc in the GNU Compiler Collection (GCC)
-    ---- configure this by changing the CC variable in Makefile
-  (c) a modern curses library, e.g. ncurses, slang, PDCurses or XCurses
+  (b) a working ANSI C compiler, e.g. gcc in the GNU Compiler Collection (GCC),
+      TinyCC (tcc), or Open Watcom (owcc)
+    ---- configure this by changing the CC variable in Makefile; you can also
+         run myman.c directly using the Linux kernel's binfmt_c module and TinyCC;
+         a simple TinyCC build-and-run may be achieved on Win32 with:
+             tcc -DRAWCURSES -Iinc -Imygetopt \
+                 src/utils.c mygetopt/mygetopt.c \
+                 -luser32 -ladvapi32 \
+                 -run src/myman.c
+  (c) a modern curses library, e.g. ncurses, slang, PDCurses or
+      XCurses; or libcaca, AA-lib, Twin, LibGGI/LibGII, Allegro, newt,
+      Carbon/Toolbox, FLTK, GTK, <disp.h>, or the Win32
+      Console/CONIO/TOS/*nix TTY APIs
     ---- old BSD curses *will not work*!
   (d) GNU Make
     ---- version 3.80 works; version 3.79.1 *will not work*!
-  (e) GNU coreutils (install, rmdir, etc.)
-    ---- old fileutils, textutils and shellutils may work too but aren't tested
-  (f) filesystem with support for long names, e.g. Linux kernel with ext2
+  (e) GNU coreutils (used: install and rmdir)
+    ---- old fileutils, textutils and shellutils may work too but
+         aren't tested; set INSTALL and RMDIR if these are not the
+         first versions in your PATH
+  (f) GNU sed
+    ---- version 4.1.5 works, and older ones probably do too; set SED
+         if GNU sed is not the first version in your PATH
+  (g) filesystem with support for long names, e.g. Linux kernel with ext2
     ---- old 8.3 char or 14 char name length limits *will not work*!
-  (g) optional: X Window System, e.g. XFree86;
-                ctheme (useful for palette setup on Linux console)
+  (h) optional: X Window System, e.g. XFree86 or X.Org
+    ---- use the configure options --with-xterm, --with-rxvt, and/or --with-kterm
+         to install wrapper shell scripts
+  (i) optional: ctheme (useful for palette setup on Linux console)
+    ---- use the configure option --with-ctheme to install myman.ct
+  (j) optional: netpbm (used for optional icon conversion)
 
 1. Configure:
-    $  /bin/sh ./configure  <-- you may add options here; add `--help' to show
+    $  /bin/sh ./configure SHELL=/bin/sh <-- add any options here; see `--help'
 
    NOTE: To save a copy of the current configuration:
     $  cp config.status config.saved
@@ -75,15 +111,15 @@ make fails, edit the makefile after reading this file, and try again.
     $  /bin/sh config.saved
 
 2. Build: 
-    $  make SHELL=/bin/sh
+    $  make
 
 3. Install:
-    #  make SHELL=/bin/sh install  <-- must be "root" for this part
+    #  make install  <-- must be "root" for this part
 
 4. Run:
     $  myman
-  or
-    $  xmyman  <-- for X Window System (also xmyman2, xmyman3, xmyman4)
+  or (if enabled by --with-xterm)
+    $  xmyman  <-- for X Window System
 
 See README for detailed notes.
 
@@ -98,11 +134,62 @@ infrastructure software; keep in mind that other similar software may
 work too, but is unlikely to have undergone much testing in
 conjunction with the MyMan video game:
 
-GNU bash       ftp://ftp.gnu.org/pub/gnu/bash/
-GCC            ftp://gcc.gnu.org/pub/gcc/
-ncurses        ftp://ftp.gnu.org/gnu/ncurses/
-GNU Make       ftp://ftp.gnu.org/gnu/make/
-GNU coreutils  ftp://alpha.gnu.org/gnu/coreutils/
-Linux kernel   ftp://ftp.kernel.org/pub/linux/kernel/
+GNU bash       http://ftp.gnu.org/pub/gnu/bash
+GCC            ftp://gcc.gnu.org/pub/gcc
+GNU Make       http://ftp.gnu.org/pub/gnu/make
+GNU coreutils  http://ftp.gnu.org/pub/gnu/coreutils
+GNU sed        http://ftp.gnu.org/pub/gnu/sed
+netpbm         http://netpbm.sourceforge.net/
+Info-ZIP       http://www.info-zip.org/pub/infozip/Zip.html
+
+For ncurses output:
+
+ncurses        http://ftp.gnu.org/pub/gnu/ncurses
+
+For other output drivers:
+
+S-Lang         http://www.s-lang.org/
+PDCurses       http://pdcurses.sourceforge.net/
+libcaca        http://sam.zoy.org/libcaca/
+AA-lib         http://aa-project.sourceforge.net/
+Twin           http://twin.sourceforce.net/
+LibGGI/LibGII  http://www.ggi-project.org/
+Allegro        http://www.talula.demon.co.uk/allegro/
+GTK/GTK+       http://www.gtk.org/
+CONIO          http://conio.sourceforge.net/
+FLTK           http://www.fltk.org/
+"TurboC CONIO" http://www.sandroid.org/TurboC/
+
+For optional extras:
+
+libiconv       http://ftp.gnu.org/pub/gnu/libiconv
 XFree86        ftp://ftp.xfree86.org/pub/XFree86/
 ctheme         http://sourceforge.net/project/?group_id=2640
+TinyCC         http://www.landley.net/code/tinycc/
+
+For GNU/Linux hosting:
+
+Debian         http://www.debian.org/
+Gentoo         http://www.gentoo.org/
+Mandriva       http://www.mandriva.com/
+Ubuntu         http://www.ubuntu.com/
+Linux kernel   ftp://ftp.kernel.org/pub/linux/kernel/
+
+For Win32 hosting:
+
+MinGW          http://www.mingw.org/
+Wine           http://www.winehq.org/
+
+For DOS hosting:
+
+DJGPP          http://www.delorie.com/djgpp/
+FreeDOS        http://www.freedos.org/
+DOSBox         http://dosbox.sourceforge.net/
+
+For TOS hosting:
+
+SpareMiNT      http://sparemint.atariforge.net/sparemint/
+AFROS          http://aranym.org/afros.html
+EmuTOS         http://emutos.sourceforge.net/
+ARAnyM         http://aranym.org/
+Hatari         http://hatari.sourceforge.net/
