! shows some basic info for the "About" menu item; the menu actually works in non-Carbon builds too, now; disabled the optimizer for now in MPW builds, it seemed like it might be causing problems; we now support the U+F8FF menu and the Font too in non-carbon builds

--- a/src/myman.man
+++ b/src/myman.man
@@ -575,6 +575,9 @@ forget previously buffered horizontal movement
 .BR / " or " \\ :
 toggle diagonal maze reflection
 .TP
+.BR ! :
+display information about the maze, tileset and spriteset
+.TP
 .BR ? " or " Ctrl-H :
 display help screen
 .PP
