old BSD curses does too work! so does old VMS curses.

--- a/INSTALL
+++ b/INSTALL
@@ -81,11 +81,10 @@ try again.
                  src/utils.c mygetopt/mygetopt.c \
                  -luser32 -ladvapi32 \
                  -run src/myman.c
-  (c) a curses library, e.g. ncurses, BSD curses, slang, PDCurses or
-      XCurses; or libcaca, AA-lib, Twin, LibGGI/LibGII, Allegro, newt,
-      Carbon/Toolbox, FLTK, GTK, <disp.h>, or the Win32
-      Console/CONIO/TOS/AROS/*nix TTY APIs
-    ---- old BSD curses *will not work*!
+  (c) a curses library, e.g. ncurses, old BSD curses, old VMS curses,
+      slang, PDCurses or XCurses; or libcaca, AA-lib, Twin,
+      LibGGI/LibGII, Allegro, newt, Carbon/Toolbox, FLTK, GTK,
+      <disp.h>, or the Win32 Console/CONIO/TOS/AROS/*nix TTY APIs
   (d) GNU Make
     ---- version 3.80 works; version 3.79.1 *will not work*!
   (e) GNU coreutils (used: install and rmdir)
