--- a/README
+++ b/README
@@ -1,9 +1,11 @@
 README - basic documentation for the MyMan video game
-Copyright 1997-2008, Benjamin C. Wiley Sittler <bsittler@gmail.com>
+Copyright 1997-2009, Benjamin C. Wiley Sittler <bsittler@gmail.com>
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.
+
+Website: http://myman.sourceforge.net/
 
 
         NOTE: !!! LICENSE CHANGE !!!
@@ -565,7 +567,7 @@ If you're using the Darwin/Mac OS X console (this is a "text mode"
 with no GUI or windowing system and is very rarely used,) you may
 install mach_acs to switch your console to an appropriate palette:
 
-   http://zoehep.xent.com/~bsittler/mach_mypal
+   http://xent.com/~bsittler/mach_mypal
 
 
 C. Window Size:
