--- a/INSTALL
+++ b/INSTALL
@@ -85,7 +85,8 @@ try again.
   (c) a curses library, e.g. ncurses, old BSD curses, old VMS curses,
       slang, PDCurses or XCurses; or libcaca, AA-lib, Twin,
       LibGGI/LibGII, Allegro, newt, Carbon/Toolbox, FLTK, GTK,
-      <disp.h>, or the Win32 Console/CONIO/TOS/AROS/VMS/*nix TTY APIs
+      Borland-style CONIO, Open Watcom-style graph.h <disp.h>, or the
+      Win32 Console/CONIO/TOS/AROS/VMS/*nix TTY APIs
   (d) GNU Make
     ---- version 3.80 works; version 3.79.1 *will not work*!
   (e) GNU coreutils (used: install and rmdir)
